--- a/fjmSite/package.json
+++ b/fjmSite/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@syncfusion/ej2-angular-calendars": "^17.1.39",
+    "chart.js": "^2.8.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
