--- a/fjmSite/package.json
+++ b/fjmSite/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.11",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "chart.js": "^2.8.0",
+    "@swimlane/ngx-charts": "^7.3.0",
     "core-js": "^2.4.1",
     "ngx-order-pipe": "^2.0.2",
     "rxjs": "^5.5.12",
